--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.defer-datasource-initialization=true
 # Following properties conflict with using ddl-auto + data.sql.
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=target/schema.sql
+
+app.version=@project.version@
