--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -19,3 +19,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Shows schema generation tool loggings.
 logging.level.org.hibernate.tool.schema.internal.SchemaCreatorImpl=DEBUG
+
+logging.level.org.springframework.security=TRACE
