--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -21,3 +21,5 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.tool.schema.internal.SchemaCreatorImpl=DEBUG
 
 logging.level.org.springframework.security=TRACE
+
+server.error.include-message=always
