--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 app.version=@project.version@
+
+server.error.include-message=always
