--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,21 @@
 			<version>${jjwt.version}</version>
 			<scope>runtime</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.hibernate.search</groupId>
+			<artifactId>hibernate-search-mapper-orm</artifactId>
+			<version>7.1.1.Final</version><!--qqqq prop-->
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.search</groupId>
+			<artifactId>hibernate-search-backend-lucene</artifactId>
+			<version>7.1.1.Final</version>
+		</dependency>
+<!--		dependencies {-->
+<!--		// ... andere dependencies (web, data-jpa, etc.)-->
+<!--		implementation("org.hibernate.search:hibernate-search-mapper-orm:7.1.1.Final")-->
+<!--		implementation("org.hibernate.search:hibernate-search-backend-lucene:7.1.1.Final")-->
+<!--		}qqqq-->
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
