--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 		<java.version>21</java.version>
 		<kotlin.version>1.9.25</kotlin.version>
 
+		<hibernate.search.version>8.0.0.Final</hibernate.search.version>
 		<jjwt.version>0.12.5</jjwt.version>
 		<restassured.version>5.5.5</restassured.version>
 	</properties>
@@ -86,18 +87,14 @@
 		<dependency>
 			<groupId>org.hibernate.search</groupId>
 			<artifactId>hibernate-search-mapper-orm</artifactId>
-			<version>7.1.1.Final</version><!--qqqq prop-->
+			<version>${hibernate.search.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate.search</groupId>
 			<artifactId>hibernate-search-backend-lucene</artifactId>
-			<version>7.1.1.Final</version>
+			<version>${hibernate.search.version}</version>
 		</dependency>
-<!--		dependencies {-->
-<!--		// ... andere dependencies (web, data-jpa, etc.)-->
-<!--		implementation("org.hibernate.search:hibernate-search-mapper-orm:7.1.1.Final")-->
-<!--		implementation("org.hibernate.search:hibernate-search-backend-lucene:7.1.1.Final")-->
-<!--		}qqqq-->
+
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
