--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 		<java.version>21</java.version>
 		<kotlin.version>1.9.25</kotlin.version>
 
+		<hibernate.search.version>7.2.4.Final</hibernate.search.version>
 		<jjwt.version>0.12.5</jjwt.version>
 		<restassured.version>5.5.5</restassured.version>
 	</properties>
@@ -82,6 +83,16 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>${jjwt.version}</version>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.search</groupId>
+			<artifactId>hibernate-search-mapper-orm</artifactId>
+			<version>${hibernate.search.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.search</groupId>
+			<artifactId>hibernate-search-backend-lucene</artifactId>
+			<version>${hibernate.search.version}</version>
 		</dependency>
 
 		<dependency>
