--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -24,3 +24,8 @@ logging.level.org.hibernate.tool.schema.internal.SchemaCreatorImpl=DEBUG
 logging.level.org.springframework.security=TRACE
 
 server.error.include-message=always
+
+#qqqq
+spring.jpa.properties.hibernate.search.backend.directory.root=target/lucene/index
+
+init.index=true
