test-too-many-hits

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -28,4 +28,8 @@ server.error.include-message=always
 #qqqq
 spring.jpa.properties.hibernate.search.backend.directory.root=target/lucene/index
 
+#qqqq
 init.index=true
+
+#qqqq
+search.limit=4
