--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.jpa.hibernate.ddl-auto=none
 
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:mariadb://localhost:3306/my-library
+spring.datasource.username=library-app
+spring.datasource.password=library-app
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 
 # Needed for databae that do not support timestamp with time zones, eg. MariaDB
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
