--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -20,7 +20,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # Shows schema generation tool loggings.
 logging.level.org.hibernate.tool.schema.internal.SchemaCreatorImpl=DEBUG
 
-# Needed for databae that do not support timestamp with time zones, eg. MariaDB
+# Needed for databases that do not support timestamp with time zones, eg. MariaDB
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 logging.level.org.springframework.security=TRACE
