--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.datasource.username=library-app
 spring.datasource.password=library-app
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 
+# default 8080
+#server.port=8080
+
 # Needed for databases that do not support timestamp with time zones, eg. MariaDB
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
