--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,5 @@ init.index=false
 
 # Max amount of hits when doing a free text search with Hibernate Search
 search.limit=200
+
+#qqqq log file location
