--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -38,3 +38,5 @@ init.index=true
 
 # Max amount of hits when doing a free text search with Hibernate Search
 search.limit=4
+
+#qqqq log file location
