--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ server.error.include-message=always
 # Where to store the Lucene index.
 spring.jpa.properties.hibernate.search.backend.directory.root=/var/lib/lucene/index
 
-# Initialize Lucene index with current databae content on start up true|false
+# Initialize Lucene index with current database content on start up true|false
 init.index=false
 
 # Max amount of hits when doing a free text search with Hibernate Search
