--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -33,7 +33,7 @@ server.error.include-message=always
 # Where to store the Lucene index.
 spring.jpa.properties.hibernate.search.backend.directory.root=target/lucene/index
 
-# Initialize Lucene index with current databae content on start up true|false
+# Initialize Lucene index with current database content on start up true|false
 init.index=true
 
 # Max amount of hits when doing a free text search with Hibernate Search
